# mimalloc-redirect

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: usage.rs
src/: lib.rs
