[package]
name = "mimalloc-redirect"
version = "0.1.0"
authors = ["GlFolker"]
edition = "2024"
rust-version = "1.85"
description = "Application-wide allocator redirection to MiMalloc."
repository = "https://github.com/GlennFolker/mimalloc-redirect"
license = "MIT OR Apache-2.0"
keywords = ["allocator", "mimalloc"]
categories = ["memory-management"]
exclude = [
    "/.git*",
    "/examples",

    "/mimalloc-src/contrib",
    "/mimalloc-src/doc",
    "/mimalloc-src/docs",
    "/mimalloc-src/test",
    "/mimalloc-src/.git*",
    "/mimalloc-src/*.yml",
    "/mimalloc-src/*.md",
]

[dependencies]
allocator-api2 = "0.2"

[target.'cfg(all(not(target_os = "windows"), any(target_env = "gnu", target_env = "musl")))'.dependencies]
libc = { version = "0.2", default-features = false }

[build-dependencies]
cmake = "0.1"
cmake-package = "0.1"
regex = "1"

[features]
nightly = ["allocator-api2/nightly"]
