[package]
name = "mimalloc-redirect"
version = "0.1.1"
authors = ["GlFolker"]
edition = "2024"
rust-version = "1.85"
description = "Application-wide allocator redirection to MiMalloc."
repository = "https://github.com/GlennFolker/mimalloc-redirect"
license = "MIT OR Apache-2.0"
keywords = ["allocator", "mimalloc"]
categories = ["memory-management"]
exclude = [
    "/.git*",
    "/examples",
    "/mimalloc-src/contrib",
    "/mimalloc-src/doc",
    "/mimalloc-src/docs",
    "/mimalloc-src/test",
    "/mimalloc-src/.git*",
    "/mimalloc-src/*.yml",
    "/mimalloc-src/*.md",
]

[target.'cfg(any(all(not(target_os = "windows"), any(target_env = "gnu", target_env = "musl")), target_os = "android"))'.dependencies]
libc = { version = "0.2", default-features = false }

[build-dependencies]
cmake = "0.1"
regex = "1"
